--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                   <span>Contact Us</span>
                    <p><span><i class="uil uil-calling"></i></span>+234 8140403110</p>
                    <p><span><i class="uil uil-map-marker"></i></span>27,Alara Street
-                   <br> Yaba 100012
+                   Yaba 100012
                    <br> Lagos State</p>
 
             </div>
